--- a/project1/index.html
+++ b/project1/index.html
@@ -113,6 +113,8 @@
     integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
     crossorigin="anonymous"></script>
 
+  <script type="application/javascript" src="libs/json/countryBorders.geo.json"></script>
+
   <script type="application/javascript" src="libs/js/jquery-2.2.3.min.js"></script>
   <script type="application/javascript" src="libs/js/script.js"></script>
 </body>
