On click gives country name

--- a/project1/index.html
+++ b/project1/index.html
@@ -60,7 +60,7 @@
   <div id="map"></div>
 
 
-  <!-- 12 columns, pop-up 
+  <!-- 12 columns, pop-up -->
       <div class="container p2 my-2 border bg-light">
         <div class="row g-2">
           <div class="col">
@@ -98,7 +98,7 @@
           </div>
         </div>
         
-      </div>-->
+      </div>
 
   <!-- Leaflet JS -->
   <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"
