Trying out some stuff API
Started on:
- Wikipedia page URL on the country name
- Capital name under country name
- Display flag

--- a/project1/index.html
+++ b/project1/index.html
@@ -63,7 +63,7 @@
   <!-- 12 columns, pop-up -->
   <div id="popUp" class="container bg-light">
     <div class="row g-2">
-      <div class="col">
+      <div id="countryFlag" class="col">
         Flag
       </div>
       <div id="countryName" class="col-8">
@@ -75,7 +75,7 @@
     </div>
 
     <div class="row">
-      <div class="col">
+      <div id="capitalCity" class="col">
         Capital City
       </div>
     </div>
@@ -84,7 +84,7 @@
       <div class="col">
         Current Time
       </div>
-      <div class="col">
+      <div id="languageSpoken" class="col">
         Language
       </div>
     </div>
