Change some things around

--- a/project1/index.html
+++ b/project1/index.html
@@ -64,10 +64,10 @@
   <div id="popUp" class="container bg-light">
     <div class="row g-2">
       <div id="countryFlag" class="col">
-        Flag
+        <img src="https://countryflagsapi.com/svg/${currentCountry}" alt="Country Flag">
       </div>
       <div id="countryName" class="col-8">
-        Country Name
+        
       </div>
       <div class="col">
         Temp
@@ -76,7 +76,7 @@
 
     <div class="row">
       <div id="capitalCity" class="col">
-        Capital City
+        
       </div>
     </div>
 
