--- a/project1/index.html
+++ b/project1/index.html
@@ -23,7 +23,7 @@
 </head>
 
 <body>
-
+  <div id=”preloader”></div>
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid">
 
