--- a/project1/index.html
+++ b/project1/index.html
@@ -8,13 +8,13 @@
   <title>World Map Info</title>
 
   <!-- Bootstrap CSS -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+  <link rel="stylesheet" href="libs/bootstrap/css/bootstrap.min.css">
+  <link rel="stylesheet" href="libs/bootstrap/css/bootstrap-grid.min.css">
+  <link rel="stylesheet" href="libs/bootstrap/css/bootstrap-utilities.min.css">
+  <link rel="stylesheet" href="libs/bootstrap/css/bootstrap-reboot.min.css">
 
   <!-- Leaflet CSS -->
-  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css"
-    integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A=="
-    crossorigin="" />
+  <link rel="stylesheet" href="libs/leaflet/css/leaflet.css"/>
 
   <!-- My own CSS sheet -->
   <link rel="stylesheet" href="libs/css/style.css">
@@ -24,18 +24,13 @@
 
 <body>
   <div id=”preloader”></div>
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <nav class="navbar navbar-light bg-light">
     <div class="container-fluid">
-
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
-        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
 
       <form id="searchForm" onload="getCountryOptions()" method="get" class="d-flex">
         <input id="userCountryInput" list="countryOptions" name="countryOptions" class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-        <datalist id="countryOptions">
-
+        <datalist id="countryOptions" >
+          
         </datalist>
 
         <button id="searchButton" onclick="onSearchClick()" class="btn btn-outline-success" type="submit">Search</button>
@@ -101,17 +96,14 @@
   </div>
 
   <!-- Leaflet JS -->
-  <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"
-    integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA=="
-    crossorigin=""></script>
+  <script src="libs/leaflet/js/leaflet.js"></script>
 
   <script src="http://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
   <script src="libs/js/leaflet-providers.js"></script>
 
   <!-- Bootstrap JS -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-    crossorigin="anonymous"></script>
+  <script src="libs/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <script src="libs/bootstrap/js/bootstrap.min.js"></script>
 
   <script type="application/json" src="libs/json/countryBorders.geo.json"></script>
 
