Made changes to countries select
Country name changes on select when you click on a country.
Pop-up runs when you select a country.
Countries now in alphabetical order

--- a/project1/index.html
+++ b/project1/index.html
@@ -24,18 +24,13 @@
 
 <body>
   <div id=”preloader”></div>
-  <nav class="navbar navbar-light bg-light">
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid">
 
-      <form id="searchForm" onload="getCountryOptions()" method="get" class="d-flex">
-        <input id="userCountryInput" list="countryOptions" name="countryOptions" class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-        <datalist id="countryOptions" >
-          
-        </datalist>
-
-        <button id="searchButton" onclick="onSearchClick()" class="btn btn-outline-success" type="submit">Search</button>
-
-      </form>
+      <select id="countryOptions" size="1">
+        <option value="" disabled selected hidden>Select a country</option>
+      </select>
+      
 
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
@@ -56,7 +51,7 @@
 
     <div class="row g-2">
       <div id="countryFlag" class="col">
-        <img id="countryFlagImg" src="https://countryflagsapi.com/svg/${currentCountry}" alt="Country Flag">
+        <img id="countryFlagImg" src="" alt="Country Flag">
       </div>
 
       <div class="col-8">
