--- a/project1/index.html
+++ b/project1/index.html
@@ -26,7 +26,7 @@
   <div id=”preloader”></div>
   <div id="map"></div>
 
-  <!-- Dropdown menu. Found on https://codepen.io/PeterGeller/pen/nYrXKd-->
+  <!-- Dropdown menu. Copied and modified from https://codepen.io/PeterGeller/pen/nYrXKd-->
   <form action="#">
  
     <div class="select-box">
@@ -40,8 +40,6 @@
      
   </form>
 
-
-
   <!-- Modal -->
   <div class="modal fade" id="newPopUp" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered">
@@ -52,19 +50,23 @@
             <img id="countryFlagImg" src="" alt="Country Flag">
           </div>
 
-          <div class="col-8">
+          <div class="col-6">
             <a class ="text-decoration-none" id="wikipediaLink" href="" target="_blank">
               <div id="countryName" class="col"></div>
             </a>
           </div>
 
           <div class="col">
-            <img src="libs/images/news_icon.svg" alt="News Icon">
+            <img data-bs-target="#openNewsToggle" data-bs-toggle="modal" src="libs/images/news_icon.svg" alt="News Icon">
           </div>
 
          <div class="col">
-            <img src="libs/images/weather_icon.svg" alt="Weather Icon">
+            <img data-bs-target="#openWeatherToggle" data-bs-toggle="modal" src="libs/images/weather_icon.svg" alt="Weather Icon">
          </div>
+
+         <div class="col">
+          <img data-bs-target="#newPopUp" data-bs-toggle="modal" src="libs/images/home_icon.svg" alt="Home Icon">
+        </div>
 
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
@@ -96,26 +98,108 @@
             <div class="col">
               Continent:
             </div>
-            <div class="col"></div>
+            <div id="continentName" class="col"></div>
           </div>
 
           <div class="row bg-secondary text-light">
             <div class="col">
               Country surface:
             </div>
-            <div class="col"></div>
+            <div id="countrySurface" class="col"></div>
           </div>
 
           <div class="row">
             <div class="col">
-              Exchange rate:
+              Currency:
             </div>
-            <div class="col"></div>
+            <div id="currency" class="col"></div>
           </div>
 
-
+          <div class="row bg-secondary text-light">
+            <div class="col">
+              Exchange rate:
+            </div>
+            <div id="exchangeRate" class="col"></div>
+          </div>
         </div>
 
+      </div>
+    </div>
+  </div>
+
+ <!-- News -->
+  <div class="modal fade" id="openNewsToggle" aria-hidden="true" aria-labelledby="openNewsToggle" tabindex="-1">
+    <div class="modal-dialog modal-dialog-centered">
+      <div class="modal-content">
+
+        <div class="modal-header">
+          <div id="countryFlag2" class="col">
+            <img id="countryFlagImg2" src="" alt="Country Flag">
+          </div>
+
+          <div class="col-6">
+            <a class ="text-decoration-none" id="wikipediaLink2" href="" target="_blank">
+              <div id="countryName2" class="col"></div>
+            </a>
+          </div>
+
+          <div class="col">
+            <img data-bs-target="#openNewsToggle" data-bs-toggle="modal" src="libs/images/news_icon.svg" alt="News Icon">
+          </div>
+
+         <div class="col">
+            <img data-bs-target="#openWeatherToggle" data-bs-toggle="modal" src="libs/images/weather_icon.svg" alt="Weather Icon">
+         </div>
+
+         <div class="col">
+          <img data-bs-target="#newPopUp" data-bs-toggle="modal" src="libs/images/home_icon.svg" alt="Home Icon">
+        </div>
+
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+
+        <div class="modal-body">
+          Test
+        </div>
+      </div>
+    </div>
+  </div>
+
+
+  <!-- Weather -->
+  <div class="modal fade" id="openWeatherToggle" aria-hidden="true" aria-labelledby="openWeatherToggle" tabindex="-1">
+    <div class="modal-dialog modal-dialog-centered">
+      <div class="modal-content">
+
+        <div class="modal-header">
+          <div id="countryFlag3" class="col">
+            <img id="countryFlagImg3" src="" alt="Country Flag">
+          </div>
+
+          <div class="col-6">
+            <a class ="text-decoration-none" id="wikipediaLink3" href="" target="_blank">
+              <div id="countryName3" class="col"></div>
+            </a>
+          </div>
+
+          <div class="col">
+            <img data-bs-target="#openNewsToggle" data-bs-toggle="modal" src="libs/images/news_icon.svg" alt="News Icon">
+          </div>
+
+         <div class="col">
+            <img data-bs-target="#openWeatherToggle" data-bs-toggle="modal" src="libs/images/weather_icon.svg" alt="Weather Icon">
+         </div>
+
+         <div class="col">
+          <img data-bs-target="#newPopUp" data-bs-toggle="modal" src="libs/images/home_icon.svg" alt="Home Icon">
+        </div>
+
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        
+        <div class="modal-body">
+          Test 2
+        </div>
       </div>
     </div>
   </div>
