--- a/project1/index.html
+++ b/project1/index.html
@@ -51,7 +51,7 @@
           </div>
 
           <div class="col-6">
-            <a class ="text-decoration-none" id="wikipediaLink" href="" target="_blank">
+            <a class="text-decoration-none" id="wikipediaLink" href="" target="_blank">
               <div id="countryName" class="col"></div>
             </a>
           </div>
@@ -129,7 +129,7 @@
 
  <!-- News -->
   <div class="modal fade" id="openNewsToggle" aria-hidden="true" aria-labelledby="openNewsToggle" tabindex="-1">
-    <div class="modal-dialog modal-dialog-centered">
+    <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
       <div class="modal-content">
 
         <div class="modal-header">
@@ -158,9 +158,8 @@
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
 
-        <div class="modal-body">
-          Test
-        </div>
+        <div id="newsArticle" class="modal-body"></div>
+          
       </div>
     </div>
   </div>
