Added minified files and reenabled exchange rate API

--- a/project1/index.html
+++ b/project1/index.html
@@ -17,7 +17,7 @@
   <link rel="stylesheet" href="libs/leaflet/css/leaflet.css" />
 
   <!-- My own CSS sheet -->
-  <link rel="stylesheet" href="libs/css/style.css">
+  <link rel="stylesheet" href="libs/css/style.min.css">
   <link rel="icon" href="favicon.png">
 
 </head>
@@ -255,11 +255,11 @@
   <script src="libs/bootstrap/js/bootstrap.bundle.min.js"></script>
   <script src="libs/bootstrap/js/bootstrap.min.js"></script>
 
-
+  <!-- Country borders json file -->
   <script type="application/json" src="libs/json/countryBorders.geo.json"></script>
 
   <script type="application/javascript" src="libs/js/jquery-2.2.3.min.js"></script>
-  <script type="application/javascript" src="libs/js/script.js"></script>
+  <script type="application/javascript" src="libs/js/script.min.js"></script>
 
 </body>
 
