--- a/project1/index.html
+++ b/project1/index.html
@@ -76,9 +76,23 @@
 
           <div class="row bg-secondary text-light">
             <div class="col">
+              Native name:
+            </div>
+            <div id="nativeName" class="col"></div>
+          </div>
+
+          <div class="row">
+            <div class="col">
               Capital City:
             </div>
             <div id="capitalCity" class="col"></div>
+          </div>
+
+          <div class="row bg-secondary text-light">
+            <div class="col">
+              Domain format:
+            </div>
+            <div id="domainFormat" class="col"></div>
           </div>
 
           <div class="row">
@@ -116,11 +130,39 @@
             <div id="currency" class="col"></div>
           </div>
 
+          <div class="row">
+            <div class="col">
+              Currency symbol:
+            </div>
+            <div id="currencySymbol" class="col"></div>
+          </div>
+
           <div class="row bg-secondary text-light">
             <div class="col">
               Exchange rate:
             </div>
             <div id="exchangeRate" class="col"></div>
+          </div>
+
+          <div class="row">
+            <div class="col">
+              Neighbours:
+            </div>
+            <div id="countryNeighbours" class="col"></div>
+          </div>
+
+          <div class="row bg-secondary text-light">
+            <div class="col">
+              Drive on:
+            </div>
+            <div id="drivingSide" class="col"></div>
+          </div>
+
+          <div class="row">
+            <div class="col">
+              Postal code format:
+            </div>
+            <div id="postalCode" class="col"></div>
           </div>
         </div>
 
