--- a/project1/index.html
+++ b/project1/index.html
@@ -301,7 +301,7 @@
   <script type="application/json" src="libs/json/countryBorders.geo.json"></script>
 
   <script type="application/javascript" src="libs/js/jquery-2.2.3.min.js"></script>
-  <script type="application/javascript" src="libs/js/script.min.js"></script>
+  <script type="application/javascript" src="libs/js/script.js"></script>
 
 </body>
 
