Added clusters, finalised things

--- a/project1/index.html
+++ b/project1/index.html
@@ -304,6 +304,27 @@
             </div>
             <div id="capitalState" class="col"></div>
           </div>
+
+          <div class="row">
+            <div class="col">
+              Sunrise:
+            </div>
+            <div id="sunrise" class="col"></div>
+          </div>
+
+          <div class="row">
+            <div class="col">
+              Sunset:
+            </div>
+            <div id="sunset" class="col"></div>
+          </div>
+
+          <div class="row bg-secondary text-light">
+            <div class="col">
+              What 3 words:
+            </div>
+            <div id="whatwords" class="col"></div>
+          </div>
   
         </div>
 
@@ -329,7 +350,8 @@
           <div class="modal-body">
   
           <div class="row">
-            <iframe id="webcamEmbed" src="" frameborder="0" title="Live webcam footage of location"></iframe>
+            <iframe allowfullscreen="true" id="webcamEmbed" src="" frameborder="0" title="Live webcam footage of location"></iframe>
+            <div>Webcams provided by <a href="https://www.windy.com/" target="_blank">windy.com</a></div>
           </div>
   
         </div>
