Removed CDN from fontawesome
Minor changes

--- a/project1/index.html
+++ b/project1/index.html
@@ -378,8 +378,8 @@
   <!-- Leaflet.markercluster JS -->
   <script src="libs/js/leaflet.markercluster.js"></script>
 
-  <!-- Fontawesome JS -->
-  <script src="https://kit.fontawesome.com/7a7804f9b6.js" crossorigin="anonymous"></script>
+  <!-- Fontawesome JS  -->
+  <script src="libs/js/all.js"></script>
 
 
   <!-- JS files -->
