Added minified js/css files

--- a/project1/index.html
+++ b/project1/index.html
@@ -27,7 +27,7 @@
   <link rel="stylesheet" href="libs/css/MarkerCluster.Default.css">
 
   <!-- My own CSS sheet -->
-  <link rel="stylesheet" href="libs/css/style.css">
+  <link rel="stylesheet" href="libs/css/style.min.css">
   <link rel="icon" href="worldfavicon.png">
 
 </head>
@@ -384,7 +384,7 @@
 
   <!-- JS files -->
   <script type="application/javascript" src="libs/js/jquery-2.2.3.min.js"></script>
-  <script type="application/javascript" src="libs/js/script.js"></script>
+  <script type="application/javascript" src="libs/js/script.min.js"></script>
 
 </body>
 
