Removed error msg from api

--- a/project1/index.html
+++ b/project1/index.html
@@ -386,7 +386,7 @@
 
   <!-- JS files -->
   <script type="application/javascript" src="libs/js/jquery-2.2.3.min.js"></script>
-  <script type="application/javascript" src="libs/js/script.min.js"></script>
+  <script type="application/javascript" src="libs/js/script.js"></script>
 
 </body>
 
