--- a/project2/index.html
+++ b/project2/index.html
@@ -1,15 +1,126 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Company Directory</title>
+    <link rel="icon" type="image/x-icon" href="bookfavicon.png">
+
+
+    <!-- Bootstrap CSS v5.2 -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css">
+
+    <!-- Style sheet -->
+    <link rel="stylesheet" href="libs/css/style.css">
 </head>
+
 <body>
 
+    <!-- Nav bar -->
+    <nav class="navbar navbar-expand-lg bg-light">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="#">Directory</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="#">All</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Departments</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Locations</a>
+              </li>
+            </ul>
+            <form class="d-flex" role="search">
+              <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+              <button class="btn btn-outline-success" type="submit">Search</button>
+            </form>
+          </div>
+        </div>
+      </nav>
+
+      <!-- All page -->
+      <div>
+        <h2 class="text-center">All employees</h2>
+        <form class="d-flex" role="search">
+            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+            <button class="btn btn-outline-success" type="submit">Search</button>
+        </form>
+
+        <a href="#employeeProfile">
+        <ul class="list-group list-group-horizontal">
+            <li class="list-group-item"><img id="profilePicture" src="libs/images/smiley.png" alt="Profile picture"></li>
+            <li class="list-group-item">Persons name</li>
+            <li class="list-group-item">Department</li>
+            <li class="list-group-item">Location</li>
+        </ul>
+        </a>
+      </div>
+
+      <!-- Individual person page for editing -->
+      <div id="employeeProfile">
+        <img id="profilePicture2" src="libs/images/smiley.png" alt="">
+        <h2 class="text-center">Persons name</h2>
+
+        <div class="row">
+            <div class="col text-center">Department</div>
+            <div class="col text-center">Marketing</div>
+        </div>
+
+        <div class="row">
+            <div class="col text-center">Location</div>
+            <div class="col text-center">London</div>
+        </div>
+
+        <div class="row">
+            <div class="col text-center">Email</div>
+            <div class="col text-center">rheffron0@ibm.com</div>
+        </div>
+    </div>
+
+    <!-- Departments page -->
+    <div id="departments">
+        <h2 class="text-center">Departments</h2>
+        <ul class="list-group">
+            <li class="list-group-item">Human Resources</li>
+            <li class="list-group-item">2</li>
+            <li class="list-group-item">3</li>
+            <li class="list-group-item">4</li>
+            <li class="list-group-item">etc</li>
+          </ul>
+    </div>
+
+    <!-- Locations page -->
+    <div id="locations">
+        <h2 class="text-center">Locations</h2>
+        <ul class="list-group">
+            <li class="list-group-item">London</li>
+            <li class="list-group-item">2</li>
+            <li class="list-group-item">3</li>
+            <li class="list-group-item">4</li>
+            <li class="list-group-item">etc</li>
+          </ul>
+    </div>
 
 
+
+      
+
+
+
+
+    <!-- Bootstrap JS v5.2 -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"></script>
+
+    <!-- My own JS -->
+    <script src="libs/js/script.js"></script>
 
 </body>
+
 </html>
