--- a/project2/index.html
+++ b/project2/index.html
@@ -28,13 +28,13 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">All</a>
+                <a id="navAll" class="nav-link" href="#listOfAll">All</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Departments</a>
+                <a id="navDepartments" class="nav-link" href="#departments">Departments</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Locations</a>
+                <a id="navLocations" class="nav-link" href="#locations">Locations</a>
               </li>
             </ul>
             <form class="d-flex" role="search">
@@ -46,7 +46,7 @@
       </nav>
 
       <!-- All page -->
-      <div>
+      <div id="listOfAll">
         <h2 class="text-center">All employees</h2>
         <form class="d-flex" role="search">
             <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
@@ -110,16 +110,13 @@
 
 
 
-      
-
-
-
-
     <!-- Bootstrap JS v5.2 -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"></script>
 
     <!-- My own JS -->
+    <script src="libs/js/jquery-3.6.0.min.js"></script>
     <script src="libs/js/script.js"></script>
+
 
 </body>
 
