Finished employee profile, shows list of depts and locations

--- a/project2/index.html
+++ b/project2/index.html
@@ -92,22 +92,30 @@
     <!-- Departments page -->
     <div id="departments">
         <h2 class="text-center">Departments</h2>
-        <ul class="list-group">
-            <li class="list-group-item"></li>
-        </ul>
+
+          <div class="template">
+            <div id="departmentsList">
+              <ul class="list-group">
+                  <li class="list-group-item departmentsName"></li>
+              </ul>
+            </div>
+          </div>
+
         <button type="button" class="btn btn-outline-primary">Edit</button>
     </div>
 
     <!-- Locations page -->
     <div id="locations">
         <h2 class="text-center">Locations</h2>
-        <ul class="list-group">
-            <li class="list-group-item">London</li>
-            <li class="list-group-item">2</li>
-            <li class="list-group-item">3</li>
-            <li class="list-group-item">4</li>
-            <li class="list-group-item">etc</li>
-          </ul>
+
+        <div class="template">
+          <div id="locationsList">
+            <ul class="list-group">
+                <li class="list-group-item locationsName">/li>
+            </ul>
+          </div>
+        </div>
+        
           <button type="button" class="btn btn-outline-primary">Edit</button>
     </div>
 
