--- a/project2/index.html
+++ b/project2/index.html
@@ -46,15 +46,17 @@
       </nav>
 
       <!-- All page -->
-      <div id="listOfAll">
+      <div id="employeePage">
         <h2 class="text-center">All employees</h2>
         <form class="d-flex" role="search">
             <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
             <button class="btn btn-outline-success" type="submit">Search</button>
         </form>
+        <button type="button" class="btn btn-outline-secondary">Add</button>
 
+        <div id="employeeList"></div>
         <div class="template">
-          <div id="listProfile">
+          <div id="employeeEntry">
             <a href="#employeeProfile">
             <ul class="list-group list-group-horizontal">
                 <li class="list-group-item listProfilePic"><img id="profilePicture" src="libs/images/smiley.png" alt="Profile picture"></li>
@@ -65,6 +67,29 @@
             </a>
           </div>
         </div>
+      </div>
+
+      <div id="createEmployee">
+        <h2 class="text-center">Add new employee</h2>
+
+        <form action="">
+          <label for="firstName">First Name</label>
+          <input type="text" name="firstName" id="firstName">
+
+          <label for="lastName">Last Name</label>
+          <input type="text" name="lastName" id="lastName">
+
+          <label for="jobTitle">Job</label>
+          <input type="text" name="jobTitle" id="jobTitle">
+
+          <label for="email">Email Address</label>
+          <input type="text" name="email" id="email">
+
+          <label for="departmentID">Department</label>
+          <input type="text" name="departmentID" id="departmentID">
+          
+          <input type="submit" value="Submit">
+        </form>
       </div>
 
       <!-- Individual person page for editing -->
@@ -87,36 +112,42 @@
             <div id="employeeEmail" class="col text-center"></div>
         </div>
         <button type="button" class="btn btn-outline-primary">Edit</button>
+        <button id="deleteEmployee" type="button" class="btn btn-outline-danger">Delete</button>
     </div>
 
     <!-- Departments page -->
-    <div id="departments">
+    <div id="departmentsPage">
         <h2 class="text-center">Departments</h2>
 
+        <div id="departmentsList"></div>
           <div class="template">
-            <div id="departmentsList">
+            <div id="departmentsEntry">
               <ul class="list-group">
                   <li class="list-group-item departmentsName"></li>
               </ul>
-            </div>
+              <button type="button" class="btn btn-outline-primary">Edit</button>
+              <button type="button" class="btn btn-outline-danger">Delete</button>
+            </div> 
           </div>
 
-        <button type="button" class="btn btn-outline-primary">Edit</button>
+
     </div>
 
     <!-- Locations page -->
-    <div id="locations">
+    <div id="locationsPage">
         <h2 class="text-center">Locations</h2>
 
+        <div id="locationsList"></div>
         <div class="template">
-          <div id="locationsList">
+          <div id="locationsEntry">
             <ul class="list-group">
                 <li class="list-group-item locationsName">/li>
             </ul>
+            <button type="button" class="btn btn-outline-primary">Edit</button>
+            <button type="button" class="btn btn-outline-danger">Delete</button>
           </div>
         </div>
         
-          <button type="button" class="btn btn-outline-primary">Edit</button>
     </div>
 
 
